Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0
-
Component/s: Storage Engine - XtraDB
-
Labels:None
-
Sprint:10.0.34
Description
When the server is started in innodb_read_only mode, there cannot be any writes to persistent InnoDB/XtraDB files. Just like the creation of buf_flush_page_cleaner_thread is skipped in this case, also the creation of the XtraDB-specific buf_flush_lru_manager_thread should be skipped.
Attachments
Issue Links
- relates to
-
MDEV-13059 XtraDB hangs on Windows due to failing to release block->lock X-latch in innodb_read_only mode
-
- Closed
-